# voc-emotion-trajectories

./: .env.example  .gitignore  LICENSE  README.ja.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/sample/: README.md  dailydialog_sample.csv  p4g_annotated_sample.csv  p4g_info_sample.csv
notebooks/: 01_utterance_emotion_classifier.ipynb  02_emotion_trajectories.ipynb  03_pipeline_predicted_vs_gold.ipynb  04_annotation_to_outcome_weights.ipynb
notebooks_src/: 01_utterance_emotion_classifier.py  02_emotion_trajectories.py  03_pipeline_predicted_vs_gold.py  04_annotation_to_outcome_weights.py
scripts/: download_data.py  make_sample.py
src/voc_arc/: __init__.py  attributes.py  classifier.py  data.py  p4g.py  plotting.py  trajectory.py  weights.py
tests/: conftest.py  test_attributes.py  test_classifier.py  test_data.py  test_p4g.py  test_plotting.py  test_trajectory.py  test_weights.py
