[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voc_arc"
version = "0.1.0"
description = "Emotion trajectories of conversations: per-utterance classification plus time-series analysis on DailyDialog"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Koji Miyazawa" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# jupytext percent scripts mix markdown and code; allow long lines in prose
# and bare display expressions at the end of cells.
"notebooks_src/*.py" = ["E501", "B018"]
